[package]
name = "day_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
doe = { version = "1.1.8", features = ["kcm", "keyboard"] }
serde = { version = "1.0.197", features = ["derive"] }
